<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tan_background"
    android:orientation="vertical"
    tools:context="com.example.android.paulasmusicapp.MainActivity">

    <TextView
        android:id="@+id/now"
        style="@style/CategoryStyle"
        android:background="@color/category_now"
        android:text="@string/category_listen_now"
        />

    <TextView
        android:id="@+id/history"
        style="@style/CategoryStyle"
        android:background="@color/category_history"
        android:text="@string/category_history"
        />

    <TextView
        android:id="@+id/lyrics"
        style="@style/CategoryStyle"
        android:background="@color/category_lyrics"
        android:text="@string/category_lyrics"
        />

    <TextView
        android:id="@+id/video"
        style="@style/CategoryStyle"
        android:background="@color/category_video"
        android:text="@string/category_video"
        />

    <TextView
        android:id="@+id/buy"
        style="@style/CategoryStyle"
        android:background="@color/category_buy"
        android:text="@string/category_buy"
        />

</LinearLayout>

